# tro2022_adaptivecontrol

./: .build.sh  .clean.sh  .create_release.sh  .gitmodules  .run.sh  CMakeLists.txt  Example.md  README.md  adaptive_control_import_eval.py  test_python_wrapper.sh
.github/workflows/: c-cpp.yml  cpp-build-check.yml  python-wrapper-check.yml
include/: Sensor.h  utils.h
include/constraints_modeling/: Example_VFI.h  VFI_Information.h
include/example/: Example_AdaptiveController.h  Example_MeasurementSpace.h  Example_SerialManipulatorEDH.h  Example_VFI.h  Example_VS050VrepRobot.h
include/interfaces/vrep/robots/: Example_VS050VrepRobot.h  SmartArm1EDH.h  SmartArm2EDH.h  VS050VrepRobotEDH.h
include/robot_control/: DQ_AdaptiveController.h  DQ_MeasurementSpace.h  Example_AdaptiveController.h
include/robot_modeling/: DQ_SerialManipulatorEDH.h  Example_SerialManipulatorEDH.h
python_wrapper/: .config.sh  CMakeLists.txt  pyproject.toml  setup.py
python_wrapper/marinholab/papers/tro2022/adaptive_control/: __init__.py
python_wrapper/marinholab/papers/tro2022/adaptive_control/Example_ParameterSpaceEDH/: __init__.py
python_wrapper/src/: adaptive_control_example_py.cpp
src/: Sensor.cpp  adaptive_control_example.cpp  adaptive_control_example_py.cpp  utils.cpp
src/constraints_modeling/: Example_VFI.cpp  VFI_Information.cpp
src/example/: Example_AdaptiveController.cpp  Example_MeasurementSpace.cpp  Example_SerialManipulatorEDH.cpp  Example_VFI.cpp  Example_VS050VrepRobot.cpp
src/interfaces/vrep/robots/: Example_VS050VrepRobot.cpp  SmartArm1EDH.cpp
src/robot_control/: DQ_AdaptiveController.cpp  Example_AdaptiveController.cpp
src/robot_modeling/: DQ_SerialManipulatorEDH.cpp  Example_SerialManipulatorEDH.cpp
src/vfi_simulation/: setpoint_simulation.cpp  vfi_simulation.sh
